[package]
name = "openssl-zt"
version = "0.0.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "OpenSSL bindings"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2018"

[features]
vendored = ['ffi/vendored']
bindgen = ['ffi/bindgen']
default = []

[dependencies]
cfg-if = "1.0"
foreign-types = "0.5.0"
libc = "0.2"
lazy_static = "^1"
rand_core = "0.5.1"

ffi = { package = "openssl-sys", version = "0.9.80", path = "../openssl-sys" }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
