[package]
name = "zerotier-core"
version = "0.1.0"
authors = ["Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2018"
build = "build.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
base64-serde = "0"
base64 = "0"
