[package]
name = "tcp-proxy"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["ZeroTier, Inc. <contact@zerotier.com>"]

[features]

[dependencies]
socket2 = "^0"
#tokio-uring = "0.5.0"
tokio = { version = "^1", default-features = false, features = [
    "fs",
    "io-util",
    "io-std",
    "net",
    "rt",
    "signal",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }

[dev-dependencies]
