[package]
name = "zerotier-core-crypto"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
rand_core = "0.5.0"
aes-gmac-siv = { path = "../aes-gmac-siv" }
x25519-dalek = { version = "1.2.0", features = ["u64_backend"] }
ed25519-dalek = { version = "1.0.1", features = ["u64_backend"] }
heapless = "0.7.7"
subtle = "2.4.1"
openssl = { version = "^0", features = [], default-features = false }
lazy_static = "^1"
foreign-types = "0.3.1"
poly1305 = { version = "0.7.2", features = [], default-features = false }

[dev-dependencies]
quickcheck = "1.0.3"
