[package]
name = "zerotier-network-hypervisor"
version = "2.0.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'

[dependencies]
zerotier-core-crypto = { path = "../zerotier-core-crypto" }
base64 = "^0"
lz4_flex = { version = "^0", features = ["safe-encode", "safe-decode", "checked-decode"] }
dashmap = "^4"
parking_lot = "^0"
arc-swap = { version = "^1", features = [], default-features = false }
lazy_static = "^1"
highway = "^0"

[target."cfg(not(windows))".dependencies]
libc = "^0"

[target."cfg(windows)".dependencies]
winapi = { version = "^0", features = ["ws2tcpip"] }
