[package]
name = "zerotier-network-hypervisor"
version = "2.0.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]

[features]
default = ["debug_events"]
debug_events = []

[dependencies]
zerotier-core-crypto = { path = "../zerotier-core-crypto" }
pqc_kyber = { path = "../third_party/kyber", features = ["kyber512"], default-features = false }
async-trait = "^0"
base64 = "^0"
lz4_flex = { version = "^0", features = ["safe-encode", "safe-decode", "checked-decode"] }
parking_lot = { version = "^0", features = [], default-features = false }
lazy_static = "^1"
serde = { version = "^1", features = ["derive"], default-features = false }

[dev-dependencies]
rand = "*"
serde_json = "*"
serde_cbor = "*"
criterion = "0.3"

[target."cfg(not(windows))".dependencies]
libc = "^0"

[target."cfg(windows)".dependencies]
winapi = { version = "^0", features = ["ws2tcpip"] }

[[bench]]
name = "benchmark_identity"
harness = false
