[package]
name = "zerotier-system-service"
version = "0.1.0"
authors = ["Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
zerotier-network-hypervisor = { path = "../zerotier-network-hypervisor" }
num_cpus = "^1"
tokio = { version = "1", features = ["rt", "net", "time", "signal", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
futures = "0"
clap = { version = "2", features = ["suggestions", "wrap_help"] }
chrono = "^0"
lazy_static = "^1"
num-traits = "^0"
num-derive = "^0"
hyper = { version = "0", features = ["http1", "runtime", "server", "client", "tcp", "stream"] }
socket2 = { version = "^0", features = ["reuseport", "unix", "pair"] }
dialoguer = "^0"
digest_auth = "^0"
colored = "^2"

[target."cfg(windows)".dependencies]
winapi = { version = "^0", features = ["handleapi", "ws2ipdef", "ws2tcpip"] }

[target."cfg(not(windows))".dependencies]
libc = "^0"
