[package]
name = "zerotier-system-service"
version = "0.1.0"
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2021"
license = "MPL-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
num-traits = "^0"
zerotier-network-hypervisor = { path = "../zerotier-network-hypervisor" }
zerotier-core-crypto = { path = "../zerotier-core-crypto" }
serde = { version = "^1", features = ["derive"], default-features = false }
serde_json = { version = "^1", features = [], default-features = false }
clap = { version = "^2", features = ["suggestions", "wrap_help"] }
colored = "^2"
num_cpus = "^1"
parking_lot = "^0"
smol = "^1"
tide = { version = "^0", features = ["h1-server"], default-features = false }
digest_auth = "^0"
chrono = "^0"

[target."cfg(windows)".dependencies]
winapi = { version = "^0", features = ["handleapi", "ws2ipdef", "ws2tcpip"] }

[target."cfg(not(windows))".dependencies]
libc = "^0"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
mach = "^0"
